Fixed z-index problem with player buttons

--- a/src/renderer/css/index.css
+++ b/src/renderer/css/index.css
@@ -128,6 +128,7 @@
     justify-self: flex-end;
     align-items: center;
     margin-left: auto;
+    z-index: 100;
 }
 
 #thumbnail {
